# AiautomationDev

./: LICENSE  README.md  ROADMAP.md  pyproject.toml
src/aiautomationdev/: cli.py  report.py
src/aiautomationdev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_report.py
